<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AdminReportActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_report"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/perhatian"
            android:textSize="17sp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/laporan_bencana"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/edt_nama_bencana_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/nama_bencana_yang_terjadi"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keterangan"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/edt_keterangan_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gambarang_uumum_keadaan"
                android:inputType="textCapSentences"
                android:maxLines="5"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/chooseBtnADMIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/choose_from_galery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/camBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/camBtn"
                app:layout_constraintTop_toBottomOf="@+id/camBtn"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/camBtnADMIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/take_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.17000002">

                <ImageView
                    android:id="@+id/imageAnaliticsADMIN"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/buttonProcessADMIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Process"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseBtn"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>
        <Button
            android:id="@+id/btn_user_send_report_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kirim_laporan"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>
</ScrollView>