<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black"
    tools:context=".InformasiActivity">
    <TextView
        android:id="@+id/ketengan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pusat_informasi"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:background="@drawable/shape"
        android:layout_below="@+id/ketengan">

        <ImageView
            android:id="@+id/img_upload_display"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_laporan"
            android:id="@+id/tv_nama_bencana"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:id="@+id/tv_keterangan"
            android:textSize="18sp"/>

    </LinearLayout>
</RelativeLayout>